# hackbox-to-keyboard

./: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  validation-build.yml
docs/superpowers/specs/: 2026-06-26-modifier-key-bindings-design.md
scripts/: release.mjs
src/: hackboxSocket.ts  layouts.ts  main.ts  memberState.ts  modifierKeys.ts  resolvePress.ts  storage.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: modifierKeys.test.ts  release.test.ts  resolvePress.test.ts
