[package]
name = "hackbox-to-keyboard"
version = "3.3.1"
description = "Hackbox host client that casts player button presses to OS-level keypresses"
edition = "2021"

[lib]
name = "hackbox_to_keyboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
# Persistent config storage (layouts, players, identity) in a JSON file in the
# app data dir — replaces WebView localStorage so data reliably survives updates.
tauri-plugin-store = "2"
# Native file pickers (layout export/import) + reading/writing the chosen file.
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# In-app auto-updates: the updater checks a signed `latest.json` manifest and
# installs newer signed builds; `process` provides relaunch() after install.
# Desktop-only — `cfg(desktop)` is a tauri-build custom cfg that isn't known at
# Cargo dependency-resolution time, so the dep filter must use the OS check.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
